--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ONNX Electron App</title>
+    <meta charset="UTF-8">
+    <title>VIGIL Dashboard</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style> body { font-family: 'Segoe UI Variable', sans-serif; } </style>
 </head>
-<body>
-  <h1>ONNX Prediction</h1>
-  <p id="result">Loading...</p>
+<body class="bg-gray-100">
+    <div id="root"></div>
+
+    <!-- Load Libraries from CDN -->
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <!-- Load App.jsx FIRST, then renderer.js -->
+    <script type="text/babel" src="./frontend/App.jsx"></script>
+    <script type="text/babel" src="./renderer.js"></script>
 </body>
 </html>
